homepage img spacing fix maps

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -84,6 +84,16 @@
     }
   }
 
+  .mx-15 {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .ml-pr-15 {
+    margin-left: 15px;
+    padding-right: 15px;
+  }
+
   .home-farm-main-info, .home-farm-info-title {
     h2 {
       font-size: 20px;
